# lab-05-boost-filesystem-Elegiacal

./: .travis.yml  CMakeLists.txt  main.cpp
sources/: main.cpp
tests/: test.cpp
